--- a/expo-01/package.json
+++ b/expo-01/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.12",
     "react": "18.2.0",
     "react-native": "0.72.4"
   },
