--- a/expo-01/package.json
+++ b/expo-01/package.json
@@ -13,7 +13,10 @@
     "expo-status-bar": "~1.6.0",
     "expo-updates": "^0.18.12",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-safe-area-context": "^4.7.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
