--- a/expo-02/package.json
+++ b/expo-02/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-01",
+  "name": "expo-02",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "^0.18.12",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "4.6.3",
-    "uuid": "^9.0.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
