--- a/expo-03/package.json
+++ b/expo-03/package.json
@@ -12,6 +12,8 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.14",
